I think I stopped the bug with the cube jumping.  Time will tell

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -5,16 +5,14 @@ html, body {
 	padding: 0;
 	box-sizing: border-box;
 	position: relative;
-	/*font-family: Helvetica;*/
-	/*font-family: monospace;*/
 	font-family: 'Press Start 2P', cursive;
 	overflow: hidden;
 }
 
 a:hover {
-color: #fff;
-text-decoration: none;
-text-shadow: 0px 2px 30px #fff;
+	color: #fff;
+	text-decoration: none;
+	text-shadow: 0px 2px 30px #fff;
 }
 
 a:focus {
@@ -45,7 +43,6 @@ canvas {
 	font-family: 'Press Start 2P', cursive;
 	text-shadow: -1px 1px 5px #fff;
 }
-
 
 aside  {
 	display: inline;
@@ -78,6 +75,10 @@ aside .social-icon:hover {
 .main-img {
 	float: left;
 	margin:0 50px 37px 0;
+}
+
+img {
+	transform: translateY(4px);
 }
 
 .img-container:hover img {
@@ -149,22 +150,20 @@ nav {
 }
 
 .main-content {
-
-	height: 90%;
+	height: 95%;
 	position: relative;
 	background-color: #EAEAEA;
 	margin:100px auto 100px auto;
 	padding: 50px;
 	font-size: 15px;
-	/*opacity: 0.9;*/
-	box-shadow: 0px 1px 80px 2px rgba(0,0,0,0.5);
+	/*box-shadow: 0px 1px 80px 2px rgba(0,0,0,0.5);*/
 	width: 100%;
 	line-height: 1.5em;
 	transition: transform 500ms ease-in-out;
 }
 
 #about-text {
-	line-height: 30 px;
+	line-height: 30px;
 }
 
 .img-wrapper {
@@ -174,8 +173,8 @@ nav {
 }
 
 .img-container {
-	height: 200px;	
-	width: 300px;	
+	/*height: 200px;	*/
+	width: 32%;	
 	position: relative;
 	overflow: hidden;
 	justify-content: space-between;
@@ -221,9 +220,6 @@ nav {
 /****************form elements******************/
 
 
-#contact {
-	position: relative;
-}
 
 .input-field {
 	display: block;
@@ -300,40 +296,40 @@ footer {
 	perspective: 100000px;
 	position: relative;
 	margin:auto;
-	width: 1200px;
+	width: 1000px;		
 	height: 100%;
-	padding-top: 2.5%;
+	padding-top: 1%;
 }
 
 #cube {
-	/*top: 5%;*/
+	transform: rotateY(0deg) scale(0.9);
 	width: 100%;
 	height: 100%;
 	position: absolute;
 	transform-style: preserve-3d;
 	position: absolute;
 	transition: all 2s ease;
+
+	
 }
 
 #about {
-	position: absolute;
 	margin: 0;
 	display: block;
-	transform: translateZ(600px);
-	
+	position: absolute;
+	transform: translateZ(500px);
 }
 
 #portfolio {
-	position: absolute;
 	margin: 0;
 	display: block;
-	transform: rotateY(90deg) translateZ(600px); 
-	
+	position: absolute;	
+	transform: rotateY(90deg) translateZ(500px); 	
 }
 
 #contact {
 	margin: 0;
 	display: block;
 	position: absolute;
-	transform: rotateY(-90deg) translateZ(600px); 
+	transform: rotateY(-90deg) translateZ(500px); 
 }
